--- a/RFIDSampleApp/src/main/AndroidManifest.xml
+++ b/RFIDSampleApp/src/main/AndroidManifest.xml
@@ -3,25 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.zebra.rfid.demo.sdksample">
 
-    <uses-permission android:name="com.symbol.datawedge.permission.contentprovider" />
-    <queries>
-        <package android:name="com.symbol.datawedge" />
-    </queries>
-
     <application
+        android:name=".MainApplication"
         android:allowBackup="true"
         android:appComponentFactory="androidx.core.app.CoreComponentFactory"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppTheme"
-        android:name=".MainApplication">
+        android:theme="@style/Theme.AppTheme">
+        <activity
+            android:name=".TagLocateActivity"
+            android:exported="false" />
         <activity
             android:name=".TagReadUserMemoryActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".TagInventoryActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
@@ -32,11 +30,17 @@
             </intent-filter>
         </activity>
     </application>
+
+    <queries>
+        <package android:name="com.symbol.datawedge" />
+    </queries>
+
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
-
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+
+    <uses-permission android:name="com.symbol.datawedge.permission.contentprovider" />
 
 </manifest>
