--- a/RFIDSampleApp/build.gradle
+++ b/RFIDSampleApp/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 34
     defaultConfig {
         applicationId "com.zebra.rfid.demo.sdksample"
-        minSdkVersion 26
+        minSdkVersion 30
         targetSdkVersion 34
         versionCode 1
         versionName "1.0"
@@ -28,5 +28,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.code.gson:gson:2.8.7'
     implementation 'com.github.ltrudu:DataWedgeIntentWrapper:14.1'
+    implementation 'com.github.ltrudu:CriticalPermissionsHelper:0.8.1'
 
 }
