--- a/RFIDSampleApp/src/main/AndroidManifest.xml
+++ b/RFIDSampleApp/src/main/AndroidManifest.xml
@@ -14,25 +14,33 @@
         android:theme="@style/Theme.AppTheme">
         <activity
             android:name=".TagLocateActivity"
-            android:exported="false" />
+            android:exported="false"
+            />
         <activity
             android:name=".TagReadUserMemoryActivity"
             android:exported="false" />
         <activity
-            android:name=".TagInventoryActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:name=".SplashActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".TagInventoryActivity"
+            android:exported="true"
+            android:label="@string/app_name">
+        </activity>
+        <uses-library
+            android:name="com.symbol.emdk"
+            android:required="true" />
     </application>
 
     <queries>
         <package android:name="com.symbol.datawedge" />
+        <package android:name="com.symbol.emdk.emdkservice" />
     </queries>
 
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
@@ -40,6 +48,10 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+
+    <uses-permission android:name="com.symbol.emdk.permission.EMDK" />
+
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
 
     <uses-permission android:name="com.symbol.datawedge.permission.contentprovider" />
 
