--- a/RFIDSampleApp/src/main/AndroidManifest.xml
+++ b/RFIDSampleApp/src/main/AndroidManifest.xml
@@ -33,9 +33,9 @@
             android:exported="true"
             android:label="@string/app_name">
         </activity>
-        <uses-library
+        <!--uses-library
             android:name="com.symbol.emdk"
-            android:required="true" />
+            android:required="true" /-->
     </application>
 
     <queries>
@@ -49,9 +49,9 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
-    <uses-permission android:name="com.symbol.emdk.permission.EMDK" />
+    <!--uses-permission android:name="com.symbol.emdk.permission.EMDK" /-->
 
-    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+    <!--uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" /-->
 
     <uses-permission android:name="com.symbol.datawedge.permission.contentprovider" />
 
