--- a/RFIDSampleApp/build.gradle
+++ b/RFIDSampleApp/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 34
+    compileSdkVersion 35
     defaultConfig {
         applicationId "com.zebra.rfid.demo.sdksample"
         minSdkVersion 30
-        targetSdkVersion 34
-        versionCode 5
-        versionName "1.5"
+        targetSdkVersion 35
+        versionCode 3
+        versionName "1.3"
     }
     buildTypes {
         release {
@@ -30,5 +30,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.7'
     implementation 'com.github.ltrudu:DataWedgeIntentWrapper:14.1'
     implementation 'com.github.ltrudu:CriticalPermissionsHelper:0.8.1'
-
+    implementation 'androidx.activity:activity:1.10.1'
 }
