--- a/RFIDSampleApp/build.gradle
+++ b/RFIDSampleApp/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.zebra.rfid.demo.sdksample"
         minSdkVersion 30
         targetSdkVersion 35
-        versionCode 6
-        versionName "1.6"
+        versionCode 7
+        versionName "1.7"
     }
     buildTypes {
         release {
@@ -31,4 +31,5 @@ dependencies {
     implementation 'com.github.ltrudu:DataWedgeIntentWrapper:14.1'
     implementation 'com.github.ltrudu:CriticalPermissionsHelper:0.8.1'
     implementation 'androidx.activity:activity:1.10.1'
+    implementation 'com.github.ltrudu:DataWedgeIntentWrapper:+'
 }
