--- a/RFIDSampleApp/src/main/AndroidManifest.xml
+++ b/RFIDSampleApp/src/main/AndroidManifest.xml
@@ -48,6 +48,10 @@
     <uses-permission android:name="com.symbol.emdk.permission.EMDK" />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
 
+    <uses-permission android:name="com.symbol.datawedge.permission.contentprovider" />
+    <queries>
+        <package android:name="com.symbol.datawedge" />
+    </queries>
 
     <permission android:name="com.zebra.scannercontrol.SERVICE_LAUNCH_PERMISSION"
         android:protectionLevel="normal" />
