--- a/RFIDSampleApp/build.gradle
+++ b/RFIDSampleApp/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 35
     defaultConfig {
-        applicationId "com.zebra.rfid.demo.sdksample"
+        applicationId "com.ltrudu.rfidsample"
         minSdkVersion 30
         targetSdkVersion 35
         versionCode 7
