--- a/RFIDSampleApp/src/main/AndroidManifest.xml
+++ b/RFIDSampleApp/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
             android:name=".ScannerActivity"
             android:exported="false" />
         <activity
+            android:name=".TagReadUserMemoryActivity"
+            android:exported="false" />
+        <activity
             android:name=".TagLocateActivity"
             android:exported="false" />
         <activity
