Added EPC Rewrite activity

--- a/RFIDSampleApp/src/main/AndroidManifest.xml
+++ b/RFIDSampleApp/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
         <activity
             android:name=".TagReadUserMemoryActivity"
             android:exported="false" />
+        <activity android:name=".EPCWriteActivity"
+            android:exported="false" />
         <activity
             android:name=".TagLocateActivity"
             android:exported="false" />
